Added Just-webcam-mode. Added width/height output from web so we can adjust alignment
Former-commit-id: 7f5285b11831f58fffecb41c6e8cdb4a19f952f5

--- a/Data_dlib/index.html
+++ b/Data_dlib/index.html
@@ -280,9 +280,10 @@
 		{
 			keypoint.position.x /= ImageWidth;
 			keypoint.position.y /= ImageHeight;
-			keypoint.position.y = 1-keypoint.position.y;
 		};
 		NewPose.keypoints.forEach ( RescaleCoords );
+		NewPose.ImageWidth = ImageWidth;
+		NewPose.ImageHeight = ImageHeight;
 		
 		OnPoseFound(NewPose);
 	}
