forced web to output at our aspect ratio to get skeleton to line up. not a proper fix!
Former-commit-id: ea0b288492a6c07242d280ff2e7e5df7c553bb0b

--- a/Data_dlib/index.html
+++ b/Data_dlib/index.html
@@ -78,6 +78,9 @@
 	var ProcessingImage = null;
 	var Websocket = null;
 	var WebsocketReconnect = null;
+	var CameraWidth = 640;
+	var CameraRatio = 1920/1080;	//640/480
+	var CameraHeight = 640/CameraRatio;
 	
 	
 	function IsString(Variable)
@@ -382,8 +385,8 @@
 			throw new Error('Browser API navigator.mediaDevices.getUserMedia not available');
 		}
 		
-		let videoWidth = 640;
-		let videoHeight = 480;
+		let videoWidth = CameraWidth;
+		let videoHeight = CameraHeight;
 		VideoElement.width = videoWidth;
 		VideoElement.height = videoHeight;
 		
